// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildLexicographicOrderingWhereCondition multiple properties cases should match snapshots for three properties - all ascending, forward pagination: multiple properties - node 1`] = `
{
  "or": [
    {
      "employee": {
        "city": {
          "gt": "New York",
        },
      },
    },
    {
      "and": [
        {
          "employee": {
            "city": {
              "eq": "New York",
            },
          },
        },
        {
          "employee": {
            "firstName": {
              "gt": "Bob",
            },
          },
        },
      ],
    },
    {
      "and": [
        {
          "employee": {
            "city": {
              "eq": "New York",
            },
          },
        },
        {
          "employee": {
            "firstName": {
              "eq": "Bob",
            },
          },
        },
        {
          "employee": {
            "id": {
              "gt": "uuid-123",
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`buildLexicographicOrderingWhereCondition multiple properties cases should match snapshots for two properties - both ascending, backward pagination: multiple properties - node 1`] = `
{
  "or": [
    {
      "person": {
        "firstName": {
          "lt": "John",
        },
      },
    },
    {
      "and": [
        {
          "person": {
            "firstName": {
              "eq": "John",
            },
          },
        },
        {
          "person": {
            "lastName": {
              "lt": "Doe",
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`buildLexicographicOrderingWhereCondition multiple properties cases should match snapshots for two properties - both ascending, forward pagination: multiple properties - node 1`] = `
{
  "or": [
    {
      "person": {
        "firstName": {
          "gt": "John",
        },
      },
    },
    {
      "and": [
        {
          "person": {
            "firstName": {
              "eq": "John",
            },
          },
        },
        {
          "person": {
            "lastName": {
              "gt": "Doe",
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`buildLexicographicOrderingWhereCondition multiple properties cases should match snapshots for two properties - mixed ordering, forward pagination: multiple properties - node 1`] = `
{
  "or": [
    {
      "person": {
        "firstName": {
          "gt": "Alice",
        },
      },
    },
    {
      "and": [
        {
          "person": {
            "firstName": {
              "eq": "Alice",
            },
          },
        },
        {
          "person": {
            "age": {
              "lt": 25,
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`buildLexicographicOrderingWhereCondition single property cases should match snapshot for ascending order with backward pagination: single property - node 1`] = `
{
  "person": {
    "firstName": {
      "lt": "John",
    },
  },
}
`;

exports[`buildLexicographicOrderingWhereCondition single property cases should match snapshot for ascending order with forward pagination: single property - node 1`] = `
{
  "person": {
    "firstName": {
      "gt": "John",
    },
  },
}
`;

exports[`buildLexicographicOrderingWhereCondition single property cases should match snapshot for descending order with backward pagination: single property - node 1`] = `
{
  "person": {
    "firstName": {
      "gt": "John",
    },
  },
}
`;

exports[`buildLexicographicOrderingWhereCondition single property cases should match snapshot for descending order with forward pagination: single property - node 1`] = `
{
  "person": {
    "firstName": {
      "lt": "John",
    },
  },
}
`;
